# kvdb

./: Cargo.toml  README.md  rustfmt.toml
example/: kvdb.yaml
src/: client.rs  error.rs  lib.rs  server.rs
src/common/: encoding.rs  keys.rs  mod.rs  options.rs  ptr_util.rs  range.rs  result.rs  scan.rs  scope.rs
src/common/planners/: mod.rs  plan_node.rs
src/server/: mod.rs  servlet.rs  session.rs  sql_server.rs  tcp_server.rs  tcp_session.rs
src/sql/: mod.rs  plan_parser.rs  schema.rs  session.rs  sql_executor.rs  sql_parser.rs  sql_statement.rs  test.rs
src/sql/data/: data_column.rs  data_result.rs  data_table.rs  data_type.rs  data_value.rs  mod.rs
src/sql/engine/: kv.rs  mod.rs  sql_catalog.rs  sql_engine.rs  sql_session.rs  sql_transaction.rs
src/sql/execution/: mod.rs  mutation.rs  query.rs  schema.rs  source.rs
src/sql/executors/: exec_create_table.rs  exec_delete.rs  exec_drop_table.rs  exec_filter.rs  exec_group_by.rs  exec_insert.rs  exec_nothing.rs  exec_projection.rs  exec_scan.rs  exec_update.rs  mod.rs
src/sql/parser/: ast.rs  mod.rs  translate.rs
src/sql/plan/: mod.rs  optimizer.rs  plan_expression.rs  plan_node.rs  planner.rs
src/sql/schema/: data_type.rs  data_value.rs  mod.rs  table.rs  table_column.rs
src/sql/statements/: analyzer_statement.rs  mod.rs  (+6 more)
src/storage/: file.rs  memory.rs  mod.rs  mvcc.rs  pager.rs  range.rs  sql_storage.rs  test.rs
tests/: disk_data_test.rs  mod.rs  pager_test.rs  plan_test.rs  sample_test.rs  sql_parser_test.rs  sql_query_test.rs  sql_test.rs  store_test.rs  tests.rs
tests/data/: kvdb.db
(+40 files in other folders)
