[package]
name = "kvdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "~1.0.126"
serde_derive = "~1.0.126"
sqlparser = "0.11"
bincode = "~1.3.3"
derivative = "~2.2.0"
regex = "1.5.4"
tokio = { version = "~1.6.2", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }
tokio-serde = { version = "~0.8", features = ["bincode"] }
tokio-stream = { version = "~0.1.6", features = ["net"]}
tokio-util = { version = "~0.6.7", features = ["codec"] }
clap = "~2.33.3"
simplelog = "0.10.0"
log = "~0.4.14"
config = "~0.11.0"
futures = "~0.3.15"
futures-util = "~0.3.15"